# bot_template

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml
eternal/: __init__.py  config.py  dispatcher.py  run.py
eternal/database/: engine.py  user.py
eternal/handlers/: __init__.py  payment.py  start.py
eternal/poetry/: pyproject.toml
eternal/utils/: notify_admins.py  set_default_commands.py
