[tool.poetry]
name = "eternal"
version = "0.1.0"
description = "telegram bot"
authors = ["Denis Zenukhin <funiusa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.25.1"
black = "^23.3.0"
sqlalchemy = "^2.0.16"
asyncpg = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
